--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
  *************************************************/
 
 .container {
-  width: 60%;
+  width: 80%;
   height: fit-content;
 
   margin: 0 auto;
@@ -26,6 +26,48 @@ body {
 
 /*************************************************
    END - UTILITIES  & MONOCLASS
+ *************************************************/
+
+/*************************************************
+   HEADER
+ *************************************************/
+
+header {
+  width: 100%;
+  background-color: aqua;
+}
+
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .nav-elements {
+  display: flex;
+  align-items: center;
+}
+
+header li {
+  display: inline-block;
+}
+
+/* media query - TABLET */
+@media all and (max-width: 680px) {
+  header .nav-elements {
+    display: none;
+  }
+}
+
+/* media query - DESKTOP */
+@media all and (min-width: 680px) {
+  header .fa-bars {
+    display: none;
+  }
+}
+
+/*************************************************
+   END - HEADER
  *************************************************/
 
 /*************************************************
@@ -95,12 +137,12 @@ body {
   align-items: center;
   flex-wrap: wrap;
 
-  height: 400px;
+  height: fit-content;
   background-color: blue;
 }
 
 #planning-section .card {
-  height: 100%;
+  height: 300px;
   flex-basis: 50%;
 
   background-color: rgb(187, 231, 217);
@@ -127,3 +169,180 @@ body {
 /*************************************************
    END - PLANNING-SECTION
 *************************************************/
+
+/*************************************************
+   TESTIMONIALS-SECTION
+*************************************************/
+
+#testimonials-section .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  height: 400px;
+  background-color: rgb(221, 255, 0);
+}
+
+#testimonials-section .card {
+  height: 200px;
+  width: 100%;
+
+  background-color: rgb(187, 231, 217);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#testimonials-section .card-content {
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+
+  background-color: rgb(255, 127, 229);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#testimonials-section .picture {
+  flex-basis: 20%;
+  height: 100%;
+  background-color: blue;
+}
+
+#testimonials-section .description {
+  flex-basis: 70%;
+  height: 100%;
+  background-color: blue;
+}
+
+/* media query - MOBILE */
+@media all and (max-width: 480px) {
+}
+
+/*************************************************
+     END - TESTIMONIALS-SECTION
+  *************************************************/
+
+/*************************************************
+   BENEFITS-SECTION
+ *************************************************/
+
+#benefits-section .container {
+  background-color: brown;
+
+  /* flex  */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  flex-wrap: wrap;
+}
+
+#benefits-section .service-card {
+  height: 400px;
+  flex-basis: calc(100% / 3);
+
+  background-color: rgb(0, 0, 0);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#benefits-section .card-content {
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+
+  background-color: rgb(69, 36, 186);
+}
+
+/* media query - TABLET */
+@media all and (max-width: 680px) {
+  #benefits-section .service-card {
+    flex-basis: 50%;
+  }
+}
+
+/* media query - MOBILE */
+@media all and (max-width: 480px) {
+  #benefits-section .service-card {
+    flex-basis: 100%;
+  }
+}
+
+/*************************************************
+     END - BENEFITS-SECTION
+  *************************************************/
+
+/*************************************************
+   ABOUT-SECTION
+*************************************************/
+#about-section .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+  height: fit-content;
+  background-color: blue;
+}
+
+#about-section .card {
+  height: 400px;
+  flex-basis: 50%;
+
+  background-color: rgb(187, 231, 217);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#about-section .card-content {
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+
+  background-color: rgb(191, 255, 127);
+}
+
+/* media query - MOBILE */
+@media all and (max-width: 480px) {
+  #about-section .card {
+    flex-basis: 100%;
+  }
+}
+
+/*************************************************
+     END - ABOUT-SECTION
+  *************************************************/
+
+/*************************************************
+   footer-SECTION
+*************************************************/
+#footer-section .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  height: fit-content;
+  background-color: blue;
+}
+
+#footer-section .cta {
+  width: 100%;
+  height: 200px;
+  background-color: rgb(18, 194, 33);
+}
+#footer-section .bottom-block {
+  width: 100%;
+  height: 100px;
+  background-color: rgb(252, 155, 37);
+}
+
+/*************************************************
+       END - footer-SECTION
+    *************************************************/
