--- a/style.css
+++ b/style.css
@@ -6,6 +6,33 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  font-family: "PT Sans", sans-serif;
+}
+
+.container {
+  width: 70%;
+  height: fit-content;
+
+  margin: 0 auto;
+}
+
+/* h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+} */
+
+/* media query - TABLET */
+@media all and (max-width: 1200px) {
+  .container {
+    width: 100%;
+  }
 }
 
 /*************************************************
@@ -15,15 +42,78 @@ body {
 /*************************************************
    UTILITIES & MONOCLASS
  *************************************************/
+.btn-getstart-small {
+  background-color: white;
+  border-radius: 5rem;
+  color: black;
+  border: none;
+  padding: 10px 20px;
+  font-size: 1.1rem;
 
-.container {
-  width: 80%;
-  height: fit-content;
-
-  margin: 0 auto;
-  background-color: aquamarine;
+  margin-left: 20px;
+  white-space: nowrap;
 }
 
+.btn-big {
+  background-color: white;
+  border-radius: 5rem;
+  color: #9792e4;
+  border: none;
+  padding: 25px 80px;
+  font-size: 1.1rem;
+
+  margin-left: 20px;
+  white-space: nowrap;
+}
+
+.btn-appstore {
+  background-color: #0084fd;
+  border-radius: 5rem;
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 10px 60px;
+  font-size: 1.1rem;
+
+  white-space: nowrap;
+  text-align: left;
+}
+
+.btn-purple {
+  background-color: #9792e4;
+  border-radius: 5rem;
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 10px 60px;
+  font-size: 1.1rem;
+
+  white-space: nowrap;
+}
+
+.font-size-2 {
+  font-size: 2rem;
+}
+
+.color-blue {
+  color: #0084fd;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.pd-top-30px {
+  padding-top: 160px;
+}
+
+.title-medium {
+  font-size: 2.8rem;
+  color: #9792e4;
+  text-align: center;
+}
+
+.c-black {
+  color: black;
+}
 /*************************************************
    END - UTILITIES  & MONOCLASS
  *************************************************/
@@ -33,8 +123,10 @@ body {
  *************************************************/
 
 header {
-  width: 100%;
-  background-color: aqua;
+  background-color: #0084fd;
+
+  padding: 10px;
+  margin-bottom: 40px;
 }
 
 header .container {
@@ -48,19 +140,38 @@ header .nav-elements {
   align-items: center;
 }
 
+header a {
+  color: white;
+  text-decoration: none;
+  padding: 0px 15px;
+  font-size: 1.1rem;
+  font-weight: 300;
+  white-space: nowrap;
+}
+
+header ul {
+  display: flex;
+  list-style-type: none;
+  gap: 10px;
+}
+
 header li {
-  display: inline-block;
+  text-decoration: none;
 }
 
 /* media query - TABLET */
-@media all and (max-width: 680px) {
+@media all and (max-width: 1100px) {
   header .nav-elements {
     display: none;
   }
 }
 
+header .fa-bars {
+  color: white;
+}
+
 /* media query - DESKTOP */
-@media all and (min-width: 680px) {
+@media all and (min-width: 1100px) {
   header .fa-bars {
     display: none;
   }
@@ -75,8 +186,6 @@ header li {
  *************************************************/
 
 #services-section .container {
-  background-color: brown;
-
   /* flex  */
   display: flex;
   justify-content: center;
@@ -88,18 +197,43 @@ header li {
 #services-section .service-card {
   height: 400px;
 
-  background-color: rgb(0, 0, 0);
-
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#services-section .service-card.demo .card-content {
+  display: flex;
+  flex-direction: row;
+}
+
+#services-section .service-card.demo .card-content div {
+  flex-basis: 40%;
+  text-align: left;
+}
+
+#services-section .img {
+  height: 100%;
+  flex-basis: 80%;
+  background-image: url(assets/img/phone.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
 }
 
 #services-section .card-content {
   width: calc(100% - 20px);
   height: calc(100% - 20px);
 
-  background-color: rgb(69, 36, 186);
+  background-color: #b5ddff;
+  border-radius: 1.5rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  text-align: center;
 }
 
 #services-section .demo {
@@ -111,6 +245,21 @@ header li {
 #services-section .development,
 #services-section .branding {
   flex-basis: calc(100% / 3);
+}
+
+#services-section .fa-solid {
+  font-size: 5vw;
+  color: #0084fd;
+}
+
+#services-section h1 {
+  font-size: 1.4rem;
+  color: #0084fd;
+}
+
+#services-section p {
+  font-size: 1.1rem;
+  line-height: 1.5rem;
 }
 
 /* media query - MOBILE */
@@ -131,32 +280,70 @@ header li {
 /*************************************************
    PLANNING-SECTION
 *************************************************/
+
+#planning-section {
+  background-color: #9792e4;
+  padding: 80px;
+}
+
 #planning-section .container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 
-  height: fit-content;
-  background-color: blue;
+  height: 100%;
+  width: 60%;
 }
 
 #planning-section .card {
-  height: 300px;
   flex-basis: 50%;
 
-  background-color: rgb(187, 231, 217);
+  height: 100%;
 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+#planning-section img {
+  width: 100%;
+}
+
+#planning-section .card-content.development h1,
+#planning-section .card-content.development p {
+  color: rgb(15, 15, 15);
+}
+#planning-section .card-content.planning h1,
+#planning-section .card-content.planning p {
+  color: rgb(255, 255, 255);
+}
+
 #planning-section .card-content {
   width: calc(100% - 20px);
   height: calc(100% - 20px);
+}
 
-  background-color: rgb(191, 255, 127);
+#planning-section .card-content.development {
+  background-color: white;
+  border-radius: 3rem;
+  padding: 50px;
+  height: 60%;
+  width: 50%;
+
+  align-self: flex-end;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#planning-section .card-content.planning {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* media query - MOBILE */
@@ -174,52 +361,86 @@ header li {
    TESTIMONIALS-SECTION
 *************************************************/
 
+#testimonials-section {
+  padding: 50px 0px;
+}
+
 #testimonials-section .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  height: 400px;
-  background-color: rgb(221, 255, 0);
 }
 
 #testimonials-section .card {
-  height: 200px;
   width: 100%;
-
-  background-color: rgb(187, 231, 217);
 
   display: flex;
   justify-content: center;
   align-items: center;
+
+  flex-wrap: wrap;
 }
 
 #testimonials-section .card-content {
   width: calc(100% - 20px);
   height: calc(100% - 20px);
 
-  background-color: rgb(255, 127, 229);
-
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  background-color: #9792e4;
+  border-radius: 2rem;
+
+  padding: 20px 10px;
+  margin: 20px 0px;
 }
 
 #testimonials-section .picture {
-  flex-basis: 20%;
-  height: 100%;
-  background-color: blue;
+  width: 20%;
+  aspect-ratio: 4/4;
+
+  border-radius: 50%;
+  margin: 20px;
+
+  background-image: url(assets/img/testimonial1.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 #testimonials-section .description {
-  flex-basis: 70%;
+  flex-basis: 80%;
   height: 100%;
-  background-color: blue;
+}
+
+#testimonials-section .description p {
+  color: white;
+}
+
+#testimonials-section .container > p {
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+#testimonials-section h3 {
+  color: white;
+}
+
+#testimonials-section h6 {
+  color: rgb(0, 0, 0);
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 300;
 }
 
 /* media query - MOBILE */
 @media all and (max-width: 480px) {
+  #testimonials-section .card-content {
+    flex-direction: column;
+  }
 }
 
 /*************************************************
@@ -230,9 +451,30 @@ header li {
    BENEFITS-SECTION
  *************************************************/
 
-#benefits-section .container {
-  background-color: brown;
+#benefits-section > h1 {
+  font-size: 2.8rem;
+  text-align: center;
+  color: white;
+}
 
+#benefits-section .service-card h1 {
+  font-size: 4rem;
+  color: #9792e4;
+}
+#benefits-section .service-card h2 {
+  font-size: 1.4rem;
+  color: #9792e4;
+}
+#benefits-section .service-card p {
+  font-size: 1rem;
+}
+
+#benefits-section {
+  background-color: #9792e4;
+  padding: 50px 0px;
+}
+
+#benefits-section .container {
   /* flex  */
   display: flex;
   justify-content: center;
@@ -242,25 +484,24 @@ header li {
 }
 
 #benefits-section .service-card {
-  height: 400px;
-  flex-basis: calc(100% / 3);
-
-  background-color: rgb(0, 0, 0);
+  width: calc(100% / 3 - 30px);
 
   display: flex;
   justify-content: center;
   align-items: center;
+
+  margin: 10px;
 }
 
 #benefits-section .card-content {
-  width: calc(100% - 20px);
-  height: calc(100% - 20px);
+  background-color: white;
+  border-radius: 2rem;
 
-  background-color: rgb(69, 36, 186);
+  padding: 50px;
 }
 
 /* media query - TABLET */
-@media all and (max-width: 680px) {
+@media all and (max-width: 1100px) {
   #benefits-section .service-card {
     flex-basis: 50%;
   }
@@ -280,32 +521,76 @@ header li {
 /*************************************************
    ABOUT-SECTION
 *************************************************/
-#about-section .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
 
-  height: fit-content;
-  background-color: blue;
+#about-section {
+  padding: 50px 0px;
 }
 
-#about-section .card {
-  height: 400px;
-  flex-basis: 50%;
+#about-section h1 {
+  font-size: 4rem;
+  color: #9792e4;
+}
 
-  background-color: rgb(187, 231, 217);
+#about-section h3 {
+  font-size: 1.4rem;
+  color: #9792e4;
+}
 
+#about-section p {
+  font-size: 1.3rem;
+  color: #000000;
+}
+
+.fa-quote-left {
+  color: #9792e4;
+}
+
+#about-section .container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+
+  gap: 30px;
+
+  height: fit-content;
+}
+
+#about-section .card-about {
+  width: 70%;
+}
+#about-section .card-picture {
+  width: 30%;
 }
 
 #about-section .card-content {
   width: calc(100% - 20px);
   height: calc(100% - 20px);
+}
 
-  background-color: rgb(191, 255, 127);
+#about-section .picture {
+  width: 100%;
+  aspect-ratio: 4/4;
+
+  border-radius: 50%;
+  background-size: cover;
+  background-image: url(assets/img/about.jpg);
+
+  position: relative;
+}
+
+#about-section .fa-quote-left {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 4vw;
+}
+
+#about-section a {
+  background-color: #9792e4;
+  color: white;
+  border-radius: 2rem;
+  padding: 5px 15px;
+  text-decoration: none;
 }
 
 /* media query - MOBILE */
@@ -322,6 +607,37 @@ header li {
 /*************************************************
    footer-SECTION
 *************************************************/
+
+footer {
+  background-color: #9792e4;
+}
+
+footer h1 {
+  color: rgb(255, 255, 255);
+  font-size: 2.8rem;
+}
+footer h6 {
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+footer h5 {
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+footer h2 {
+  color: #fdc15f;
+  font-size: 5rem;
+}
+
+footer p {
+  color: white;
+}
+
 #footer-section .container {
   display: flex;
   flex-direction: column;
@@ -329,18 +645,31 @@ header li {
   align-items: center;
 
   height: fit-content;
-  background-color: blue;
+
+  text-align: center;
 }
 
 #footer-section .cta {
   width: 100%;
-  height: 200px;
-  background-color: rgb(18, 194, 33);
+
+  padding: 60px 0px;
+
+  background-color: #9792e4;
 }
 #footer-section .bottom-block {
   width: 100%;
   height: 100px;
-  background-color: rgb(252, 155, 37);
+
+  padding: 60px 0px;
+  background-color: #383838;
+}
+
+#footer-section .bottom-block p {
+  color: white;
+}
+#footer-section .bottom-block a {
+  color: #9792e4;
+  text-decoration: underline;
 }
 
 /*************************************************
